# CPP_4_CFD

./: README.md
1D_LinearConvection/: 1DLinearConv.cpp  1DLinearConvection  CMakeLists.txt  main
1D_NonLinearConvection/: 1DNonLinearConv.cpp  1DNonLinearConvection  CMakeLists.txt  config.txt  output.txt  temp.txt
3.1_CDS_1DNonLinearConvection/: CDS1DNonLinearConvection  CDS_1DNonLinearConv.cpp  CMakeLists.txt  config.txt  makescript.sh
3.1_CDS_1DNonLinearConvection/results/: output_0.000000.txt  output_0.012500.txt  (+38 more)
3_CFL_1DNonLinearConvection/: CFL1DNonLinearConvection  CFL_1DNonLinearConv.cpp  CMakeLists.txt  config.txt  makescript.sh
3_CFL_1DNonLinearConvection/results/: output_0.000000.txt  output_0.008333.txt  output_0.016667.txt  output_0.025000.txt  output_0.033333.txt  output_0.041667.txt  output_0.050000.txt  output_0.058333.txt  output_0.066667.txt  output_0.075000.txt  output_0.083333.txt  output_0.091667.txt  output_0.100000.txt  output_0.108333.txt  output_0.116667.txt  output_0.125000.txt  output_0.133333.txt  output_0.141667.txt  output_0.150000.txt  output_0.158333.txt  output_0.166667.txt  output_0.175000.txt  output_0.183333.txt  output_0.191667.txt  output_0.200000.txt  output_0.208333.txt  output_0.216667.txt  output_0.225000.txt  output_0.233333.txt  output_0.241667.txt  output_0.250000.txt  output_0.258333.txt  output_0.266667.txt  output_0.275000.txt  output_0.283333.txt  output_0.291667.txt  output_0.300000.txt  output_0.308333.txt  output_0.316667.txt  output_0.325000.txt  (+20 more)
pyUtils/: animator.py
utils/: utils.cpp  utils.h
